[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Marcus Bergenlid <marcus.bergenlid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
serde = "1.0.118"
recap = "0.1.1"
serde_derive = "1.0.118"
