[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Marcus Bergenlid <marcus.bergenlid@gmail.com>"]
edition = "2018"

[build-dependencies] # <-- We added this and everything after!
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
serde = "1.0.118"
recap = "0.1.1"
serde_derive = "1.0.118"
lalrpop-util = "0.19.0"

