[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_lib = { path = "../aoc-lib" }
itertools = "0.12.0"
nalgebra = "0.33.2"
recap = "0.1.2"
regex = "1.11.1"
serde = "1.0.193"
serde_derive = "1.0.193"
